--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-av": "^15.0.1",
+    "expo-document-picker": "^13.0.1",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~6.3.1",
@@ -32,6 +35,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2"
   },
